--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -34,8 +34,8 @@ jobs:
         run: terraform plan
         working-directory: ./Terraform-vpc
 
-      - name: Terraform destroy
-        id: destroy
-        run: terraform destroy -auto-approve
+      - name: Terraform apply
+        id: apply
+        run: terraform apply -auto-approve
         working-directory: ./Terraform-vpc
         
